<resources>
    <string name="app_name">Parental Control Application</string>
    <string name="parental_control_application">Parental Control Application</string>
    <string name="be_fully_aware_of_your_child">Be Fully Aware of Your Child</string>
    <string name="get_start_with_few_steps_to_complete_the_log_in_to_parental_control_app">Get start with few steps to complete the log in to parental control app.</string>
    <string name="get_started">Get started</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="id_number">ID Number</string>
    <string name="register">register</string>
    <string name="todo">TODO</string>
    <string name="parental_control_app">Parental control App</string>
    <string name="welcome">Welcome!</string>
    <string name="descover_the_option">Descover the Option</string>
    <string name="explore">Explore</string>
    <string name="discover_the_option">Discover The Option</string>
    <string name="appointments_and_health_assessments">Appointments and health assessments</string>
    <string name="health">Health</string>
    <string name="write_here">Write here</string>
    <string name="welcome_to_easy_chatgpt_ntry_it_out_now">Welcome to Easy ChatGPT\nTry it out now</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save">Save</string>
    <string name="chat_parental">Chat Parental</string>
    <string name="imagechat">imageChat</string>
    <string name="parental_control_section">Parental control Section</string>
    <string name="chat_school">Chat School</string>
    <string name="tracker">Tracker</string>
    <string name="health_status">Health Status</string>
    <string name="discover">Discover</string>
    <string name="sent">sent</string>
    <string name="appointment">Appointment</string>
    <string name="ali_health_status">Ali Health Status</string>
    <string name="boy1">boy1</string>
    <string name="he_s_a_12_years_old_boy">He\'s a 12 years old boy</string>
    <string name="he_has_a_motor_disability_since_childhood">He Has a motor disability since childhood</string>
    <string name="he_had_an_operation_last_week">He had an operation last week</string>
    <string name="he_has_a_radiology_appointment_on_the_10th_of_jun">He has a radiology appointment on the 10th of Jun</string>
    <string name="contact_form">Contact Form</string>
    <string name="appoitment_from">Appoitment From</string>
    <string name="appointment_form">Appointment Form</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="write_event">Write Event</string>
    <string name="add_email">Add Email</string>
    <string name="give_email">Give Email</string>
    <string name="add_events">Add Events</string>
    <string name="time">Time</string>
    <string name="send">Send</string>
    <string name="event_and_appointment">Event and Appointment</string>
    <string name="title">Title</string>
    <string name="Title" />
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="add_event">Add Event</string>
</resources>