<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".d1">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="345dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
            android:layout_width="367dp"
            android:layout_height="91dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:gravity="center"
            android:text="@string/event_and_appointment"
            android:textColor="@color/black"
            android:textSize="37sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/Event"
        android:layout_width="296dp"
        android:layout_height="190dp"
        android:contentDescription="@string/boy1"
        android:foregroundGravity="center"
        android:src="@drawable/add"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="360dp"
        android:layout_height="69dp"
        android:background="@drawable/edittext_backgroun"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="286dp" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="384dp"
        android:layout_height="68dp"
        android:background="@drawable/edittext_backgroun"
        android:gravity="center"
        android:hint="@string/location"
        android:inputType="text"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="366dp"
        android:layout_height="69dp"
        android:background="@drawable/edittext_backgroun"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocation"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/etDescription"
        android:background="@drawable/rect_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>