<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".d2"
    tools:ignore="ExtraText">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_marginBottom="-10dp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chat_parental"
        android:textSize="28sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:id="@+id/bottom_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message_edit_text"
            android:layout_centerInParent="true"
            android:hint="@string/write_here"
            android:padding="16dp"
            android:layout_toStartOf="@id/send_btn"
            android:background="@drawable/rounded_corner"/>

        <ImageButton
            android:id="@+id/send_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imagechat"
            android:padding="8dp"
            android:src="@drawable/baseline_send_24" />
    </RelativeLayout>



</RelativeLayout>