<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


        <ImageView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="420dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/asar"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#3700B3"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/username"
            android:layout_width="358dp"
            android:layout_height="62dp"
            android:background="@drawable/edittext_backgroun"
            android:hint="@string/name"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/ID"
            android:layout_width="358dp"
            android:layout_height="62dp"
            android:background="@drawable/edittext_backgroun"
            android:hint="@string/id_number"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp"
            app:layout_constraintVertical_bias="0.403"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <Button
            android:id="@+id/Register"
            android:layout_width="360dp"
            android:layout_height="82dp"
            android:backgroundTint="#3700B3"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ID"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>