<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".d4">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/annie_use_your_telescope"
            android:gravity="center"
            android:text="@string/ali_health_status"
            android:textColor="@color/black"
            android:textSize="39sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/Ali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:src="@drawable/boy"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/boy1" />


    <TextView
        android:id="@+id/Health"
        android:layout_width="326dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rect_background"
        android:fontFamily="@font/asar"
        android:gravity="center"
        android:text="@string/he_s_a_12_years_old_boy"
        android:textColor="#F6F5F5"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Health1"
        android:layout_width="357dp"
        android:layout_height="89dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rect_background"
        android:fontFamily="@font/asar"
        android:gravity="center"
        android:text="@string/he_has_a_motor_disability_since_childhood"
        android:textColor="#F6F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/Health2"
        android:layout_width="365dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rect_background"
        android:fontFamily="@font/asar"
        android:gravity="center"
        android:text="@string/he_had_an_operation_last_week"
        android:textColor="#F6F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/Health3"
        android:layout_width="370dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rect_background"
        android:fontFamily="@font/asar"
        android:gravity="center"
        android:text="@string/he_has_a_radiology_appointment_on_the_10th_of_jun"
        android:textColor="#F6F5F5"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>