<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeDashboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBaseline_toBaselineOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="94dp"
                android:layout_marginRight="94dp"
                android:fontFamily="@font/asar"
                android:gravity="center"
                android:textColor="@color/purple_700"
                android:text="Control Parental App"
                android:textSize="30dp">

            </TextView>

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#7880AF"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/bookcon">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/appointment"
                        android:fontFamily="@font/asar"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700"
                        android:textSize="23dp">

                    </TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#CF6D8E"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/Chat">

                    </ImageView>

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="52dp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/asar"
                        android:text="@string/chat_school"
                        android:textColor="@color/purple_700"
                        android:textAlignment="center"
                        android:textSize="23dp">

                    </TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#FFC107"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="109dp"
                        android:layout_height="108dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/tracker">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tracker"
                        android:fontFamily="@font/asar"
                        android:textColor="@color/purple_700"
                        android:textAlignment="center"
                        android:textSize="28dp">

                    </TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#ECE9EF"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/health">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="39dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/health_status"
                        android:fontFamily="@font/asar"
                        android:textColor="@color/purple_700"
                        android:textAlignment="center"
                        android:textSize="23dp">

                    </TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>